Card 27 - several minor fixes to UI to improve data visibility

--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -1,3 +1,7 @@
+.board-name {
+  width: 20%;
+}
+
 th {
   text-align: center;
 }
@@ -8,14 +12,4 @@ td {
 
 footer {
   margin: 20px;
-}
-
-.card-name {
-  text-align: left;
-  width: 25%;
-}
-
-.board-name {
-  text-align: left;
-  width: 20%;
 }
